samples/_failures_safe/1761396457_348261_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_daaebce0.c: In function ‘main’:
./samples/SAFE/__tmp_daaebce0.c:153:25: error: missing terminating " character
  153 |         fprintf(stderr, "Failed to add
      |                         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_daaebce0.c:153:9: error: expected expression at end of input
  153 |         fprintf(stderr, "Failed to add
      |         ^~~~~~~
./samples/SAFE/__tmp_daaebce0.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_daaebce0.c:153:9: error: expected declaration or statement at end of input
